nginx-nlb-svc/nginx-svc-nlb.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
#    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: ip
    service.beta.kubernetes.io/aws-load-balancer-type: nlb-ip
    service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"     # default is internal facing 
    service.beta.kubernetes.io/aws-load-balancer-additional-resource-tags: Environment=dev,Team=test
  labels:
    app: my-nginx-nlb
  name: my-nginx-nlb
spec:
  externalTrafficPolicy: Local
# Local = It will open a range in securitygroup instead of one NodePort !
# External Traffic Policy=Local > shwos Unhealthy taregets, change to `Cluster`` to All Healthy
#  internalTrafficPolicy: Local
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  type: LoadBalancer
  selector:
    app: my-nginx-nlb
